Fixed a css alignment bug in the site header on small displays.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,7 +39,7 @@ color: $theme-color;
 @include media-query($on-palm) {
 position: fixed;
 top: 0px;
-right: 10px;
+left: 10px;
 text-align: right;
 &:hover .trigger {
 display: block;
